--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "lodash": "^4.17.21",
+    "mongodb": "^5.1.0",
     "next": "13.2.4",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
