--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "xrpl": "^2.7.0"
   },
   "devDependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@types/jest": "^29.4.0",
+    "axios": "^1.3.4",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5"
   }
