--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ XRPL_PRIVATEKEY_HOT=""
 XRPL_ADDRESS_HOT=""
 MONGODB_BC_URI=
 MONGODB_BC_DB=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET_NAME=
+PINATA_API_KEY=
+PINATA_SECRET_KEY=
