--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "aws-sdk": "^2.1343.0",
     "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -32,13 +33,16 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.5.0",
     "typescript": "4.9.5",
+    "uuid": "^9.0.0",
     "xrpl": "^2.7.0"
   },
   "devDependencies": {
     "@pinata/sdk": "^2.1.0",
     "@types/formidable": "^2.0.5",
     "@types/jest": "^29.4.0",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "jest": "^29.5.0",
