--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "18.0.11",
     "aws-sdk": "^2.1343.0",
     "axios": "^1.3.4",
+    "csv-parser": "^3.0.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "formidable": "^2.1.1",
